Version 0.6 (WIP)
-------------------------------------------------------------------------
NEW FEATURES
*url_replace_param introduced, to augment url_extract_param (previously simply url_param). This
allows you to take the value a parameter has associated with it, and replace it with one of your choosing.

BUG FIXES
*url_param (now url_extract_param) previously failed with an obfuscated error if the requested
parameter terminated the URL. This has now been fixed.

DEVELOPMENT
*unit tests expanded