@@ -1,9 +1,10 @@
 # Generated by roxygen2 (4.0.2): do not edit by hand
 
+export(extract_host)
+export(extract_parameter)
+export(replace_parameter)
 export(url_decode)
 export(url_encode)
-export(url_extract_param)
 export(url_parse)
-export(url_replace_param)
 importFrom(Rcpp,sourceCpp)
 useDynLib(urltools)
