@@ -1,9 +1,9 @@
 % Generated by roxygen2 (4.0.2): do not edit by hand
-\name{url_extract_param}
-\alias{url_extract_param}
+\name{extract_parameter}
+\alias{extract_parameter}
 \title{extract the value of an API parameter}
 \usage{
-url_extract_param(urls, parameter)
+extract_parameter(urls, parameter)
 }
 \arguments{
 \item{urls}{a vector of URLs.}
@@ -15,7 +15,7 @@ with \code{\link{tolower}} may be useful).}
 a character vector containing the value retrieved from each URL.
 }
 \description{
-\code{url_extract_param} takes a vector of URLs and extracts the value associated with
+\code{extract_parameter} takes a vector of URLs and extracts the value associated with
 a specified parameter
 }
 \details{
@@ -23,7 +23,7 @@ People tend to put useful data in URL parameters, particularly around
 APIs. Extracting these is a pain unless you have a very consistent API, since you're essentially
 doing partial string-matching with a potentially arbitrary number of characters to include.
 
-\code{url_extract_param} accepts a vector of URLs, and the name of the parameter (without an equals sign)
+\code{extract_parameter} accepts a vector of URLs, and the name of the parameter (without an equals sign)
 and returns the value associated with that parameter. In the case that the parameter
 is represented multiple times within the URL, the first instance will be used.
 }
@@ -31,6 +31,6 @@ is represented multiple times within the URL, the first instance will be used.
 url_extract_param(urls = "http://google.org/w/api.php?format=xml&smstate=all", parameter = "format")
 }
 \seealso{
-\code{\link{url_replace_param}} for replacing, rather than extracting, values.
+\code{\link{replace_parameter}} for replacing, rather than extracting, values.
 }
 
