@@ -1,9 +1,9 @@
 % Generated by roxygen2 (4.0.2): do not edit by hand
-\name{url_replace_param}
-\alias{url_replace_param}
+\name{replace_parameter}
+\alias{replace_parameter}
 \title{replace the value of an API parameter}
 \usage{
-url_replace_param(urls, parameter, new_value)
+replace_parameter(urls, parameter, new_value)
 }
 \arguments{
 \item{urls}{a vector of URLs.}
@@ -18,7 +18,7 @@ a character vector containing the amended URLs. In the situation where the param
 not present within the URL, the original URL will be returned.
 }
 \description{
-\code{url_replace_param} takes a vector of URLs and replaces the value
+\code{replace_parameter} takes a vector of URLs and replaces the value
 associated with a particular URL parameter, with one of your choosing.
 }
 \details{
@@ -26,7 +26,7 @@ As well as component extraction, people can also find it useful to have access
 to component replacement - for example, mass-modifying a set of URLs used for API queries
 to output JSON rather than XML.
 
-\code{url_replace_param} accepts a vector of URLs, the name of a parameter, and a replacement value.
+\code{replace_parameter} accepts a vector of URLs, the name of a parameter, and a replacement value.
 It then loops through the URLs replacing the existing value held by that parameter with the new one.
 
 In the case that a parameter is present multiple times in a URL, only the first instance will be amended.
@@ -36,6 +36,6 @@ In the case that a parameter is not present at all, no change to the URL will be
 url_replace_param(urls = "http://google.org/w/api.php?format=xml&smstate=all", parameter = "format", new_value = "json")
 }
 \seealso{
-\code{\link{url_extract_param}} for extracting, rather than replacing, values.
+\code{\link{extract_parameter}} for extracting, rather than replacing, values.
 }
 
