@@ -11,6 +11,7 @@ entirely vectorised. It is intended to be useful for people dealing with
 web-related datasets, such as server-side logs.
 }
 \seealso{
-\link{url_decode}, \link{url_encode}, \link{url_extract_param}, \link{url_replace_param}, \link{parse_url}
+\link{url_decode}, \link{url_encode}, \link{extract_parameter}, \link{replace_parameter},
+\link{parse_url}, \link{extract_host}
 }
 
