@@ -137,14 +137,14 @@ std::list < std::vector < std::string > > url_parse(std::vector < std::string > 
 }
 
 //'@title extract the value of an API parameter
-//'@description \code{url_extract_param} takes a vector of URLs and extracts the value associated with
+//'@description \code{extract_parameter} takes a vector of URLs and extracts the value associated with
 //'a specified parameter
 //'
 //'@details People tend to put useful data in URL parameters, particularly around
 //'APIs. Extracting these is a pain unless you have a very consistent API, since you're essentially
 //'doing partial string-matching with a potentially arbitrary number of characters to include.
 //'
-//'\code{url_extract_param} accepts a vector of URLs, and the name of the parameter (without an equals sign)
+//'\code{extract_parameter} accepts a vector of URLs, and the name of the parameter (without an equals sign)
 //'and returns the value associated with that parameter. In the case that the parameter
 //'is represented multiple times within the URL, the first instance will be used.
 //'
@@ -155,13 +155,13 @@ std::list < std::vector < std::string > > url_parse(std::vector < std::string > 
 //'
 //'@return a character vector containing the value retrieved from each URL.
 //'
-//'@seealso \code{\link{url_replace_param}} for replacing, rather than extracting, values.
+//'@seealso \code{\link{replace_parameter}} for replacing, rather than extracting, values.
 //'@examples
 //'url_extract_param(urls = "http://google.org/w/api.php?format=xml&smstate=all", parameter = "format")
 //'
 //'@export
 // [[Rcpp::export]]
-std::vector < std::string > url_extract_param(std::vector < std::string > urls, std::string parameter){
+std::vector < std::string > extract_parameter(std::vector < std::string > urls, std::string parameter){
   
   //Measure size, create output object
   int input_size = urls.size();
@@ -178,14 +178,14 @@ std::vector < std::string > url_extract_param(std::vector < std::string > urls, 
 
 
 //'@title replace the value of an API parameter
-//'@description \code{url_replace_param} takes a vector of URLs and replaces the value
+//'@description \code{replace_parameter} takes a vector of URLs and replaces the value
 //'associated with a particular URL parameter, with one of your choosing.
 //'
 //'@details As well as component extraction, people can also find it useful to have access
 //'to component replacement - for example, mass-modifying a set of URLs used for API queries
 //'to output JSON rather than XML.
 //'
-//'\code{url_replace_param} accepts a vector of URLs, the name of a parameter, and a replacement value.
+//'\code{replace_parameter} accepts a vector of URLs, the name of a parameter, and a replacement value.
 //'It then loops through the URLs replacing the existing value held by that parameter with the new one.
 //'
 //'In the case that a parameter is present multiple times in a URL, only the first instance will be amended.
@@ -201,14 +201,14 @@ std::vector < std::string > url_extract_param(std::vector < std::string > urls, 
 //'@return a character vector containing the amended URLs. In the situation where the parameter is
 //'not present within the URL, the original URL will be returned.
 //'
-//'@seealso \code{\link{url_extract_param}} for extracting, rather than replacing, values.
+//'@seealso \code{\link{extract_parameter}} for extracting, rather than replacing, values.
 //'
 //'@examples
 //'url_replace_param(urls = "http://google.org/w/api.php?format=xml&smstate=all", parameter = "format", new_value = "json")
 //'
 //'@export
 // [[Rcpp::export]]
-std::vector < std::string > url_replace_param(std::vector < std::string > urls, std::string parameter, std::string new_value){
+std::vector < std::string > replace_parameter(std::vector < std::string > urls, std::string parameter, std::string new_value){
   
   //Measure size, create output object
   int input_size = urls.size();
@@ -217,6 +217,31 @@ std::vector < std::string > url_replace_param(std::vector < std::string > urls, 
   //Decode each string in turn.
   for (int i = 0; i < input_size; ++i){
     output[i] = parsing::replace_parameter(urls[i], parameter, new_value);
+  }
+  
+  //Return
+  return output;
+}
+
+//'@title extract a URL's hostname and provide it
+//'@description similar to \code{\link{url_parse}} or \code{\link{extract_parameter}}, but
+//'for hostnames only.
+//'
+//'@param urls a vector of URLs
+//'
+//'@return a vector of hostnames. In the event that a hostname cannot be identified, an
+//'empty string will be returned.
+//'@export
+//[[Rcpp::export]]
+std::vector < std::string > extract_host(std::vector < std::string > urls){
+  
+  //Measure size, create output object
+  int input_size = urls.size();
+  std::vector < std::string > output(input_size);
+  
+  //Decode each string in turn.
+  for (int i = 0; i < input_size; ++i){
+    output[i] = parsing::extract_host(urls[i]);
   }
   
   //Return
